--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-mysql-session": "^3.0.0",
     "express-session": "^1.17.3",
-    "mysql2": "^3.6.0",
+    "mysql2": "^3.6.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
